Remove deprecated method new URL